--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "humaidem/filament-map-picker": "^0.1.5",
         "laravel/framework": "^10.10",
+        "laravel/pulse": "^1.2",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
     },
