--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "bezhansalleh/filament-shield": "^3.2",
+        "dedoc/scramble": "^0.11.23",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "humaidem/filament-map-picker": "^0.1.5",
