--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "humaidem/filament-map-picker": "^0.1.5",
+        "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/pulse": "^1.2",
         "laravel/sanctum": "^3.3",
